fixed misaligned things

--- a/index.css
+++ b/index.css
@@ -296,7 +296,8 @@ height:100%;
 background:linear-gradient(180deg,transparent,rgba(0,0,0,0.7));
 opacity:0;
 display:flex;
-align-items:flex-end;
+/* center text both horizontally and vertically */
+align-items:center;
 justify-content:center;
 padding:20px;
 transition:.3s;
